<resources>
    <string name="app_name">UIComponent</string>
    <string name="nama">Nama :</string>
    <string name="gender">Gender :</string>
    <string name="wanita">WANITA</string>
    <string name="pria">PRIA</string>
    <string name="hobi">Hobi :</string>
    <string name="coding">Coding</string>
    <string name="reading">Reading</string>
    <string name="travelling">Travelling</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>d
    <string name="masukkan_nama">Masukkan Nama</string>/>
</resources>