<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/nama"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNama" />

    <TextView
        android:id="@+id/txtHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/hobi"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGender" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_nama"
        android:inputType="textPersonName"
        android:labelFor="@id/txtNama"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNama"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtGender"
        app:layout_constraintTop_toBottomOf="@+id/editName">

        <RadioButton
            android:id="@+id/rbPria"
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:text="@string/pria"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbWanita"
            android:layout_width="143dp"
            android:layout_height="45dp"
            android:text="@string/wanita"
            android:textSize="20sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCoding"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="23dp"
        android:text="@string/coding"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cbReading"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:text="@string/reading"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCoding" />

    <CheckBox
        android:id="@+id/cbTravelling"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:text="@string/travelling"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbReading" />

    <ImageButton
        android:id="@+id/imgButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTravelling"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/imgButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="37dp"
        android:contentDescription="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTravelling"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>